syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Server.Presentation.Grpc.Authentication.V1";

package authentication.v1;

service Authentication {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc TokenRefresh (TokenRefreshRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string audience = 3;
}

message LoginResponse {
  bool isSuccess = 1;
  string accessToken = 2;
  google.protobuf.Timestamp expiration = 3;
  string refreshToken = 4;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  bool isSuccess = 1;
  string message = 2;
}

message TokenRefreshRequest {
  string refreshToken = 1;
  string audience = 2;
}